[build-system]
requires = ["setuptools>61.0"]
build-backend ="setuptools.build_meta"

[project]
name = "pulpy"
version = "1.8.1"
authors = [
  { name="Jonathan Martin", email="jonathan.bach.martin@vumc.org" },
]
description = "PulPy-Pulses in Python. A package for MRI/NMR RF pulse design"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://github.com/jonbmartin/pulpy"
repository = "https://github.com/jonbmartin/pulpy"