[tool.poetry]
name = "pulpy"
version = "1.8.2"
description = "PulPy: Pulses in Python. A package for MRI RF and gradient pulse design."
authors = ["jonbmartin <jon.bach.martin@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.4"
numba = "^0.59.1"
PyWavelets = "^1.6.0"
scipy = "^1.13.1"
tqdm = "^4.66.4"
sigpy = "^0.1.26"

[tool.poetry.group.dev.dependencies]
coverage = "^7.5.3"
ruff = "^0.4.8"
Sphinx = "^7.1.2"
sphinx-rtd-theme = "^2.0.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
