[tool.poetry]
name = "pulpy"
version = "1.8.8"
description = "PulPy: Pulses in Python. A package for MRI RF and gradient pulse design."
authors = ["jonbmartin <jon.bach.martin@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/jonbmartin/pulpy"
repository = "https://github.com/jonbmartin/pulpy"
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering"
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.4"
numba = "^0.59.1"
scipy = "^1.13.1"
sigpy = "^0.1.26"

[tool.poetry.group.dev.dependencies]
coverage = "^7.5.3"
ruff = "^0.4.8"
Sphinx = "^8.0.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
